--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,7 @@
 sonar.projectKey=cgalvezv-uniandes_TutorialCancionesTags
 sonar.organization=cgalvezv-uniandes
 sonar.coverage.exclusions=**tests/**,**src/vista/**,**docs/**,**setup.py**
+sonar.python.coverage.reportPaths=coverage.xml
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=TutorialCancionesSQLAlchemy
