Test sonar: add missing dependencies in tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -5,9 +5,12 @@ skipsdist = True
 [testenv]
 deps =
     pytest
+    pytest-cov
     coverage
+    faker
+    SQLAlchemy
 commands =
-    coverage run -m pytest
+    coverage run -m pytest --cov=tests
     coverage xml
  
 [coverage:run]
