--- a/.coveragerc
+++ b/.coveragerc
@@ -1,9 +1,7 @@
 # .coveragerc to control coverage.py
 [run]
 branch = True
-source = 
-    src
-    tests
+source = src
 # omit = bad_file.py
 
 [paths]
