--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,6 +2,7 @@ sonar.projectKey=cgalvezv-uniandes_TutorialCancionesTags
 sonar.organization=cgalvezv-uniandes
 sonar.coverage.exclusions=**tests/**,**src/vista/**,**docs/**,**setup.py**
 sonar.python.coverage.reportPaths=coverage.xml
+sonar.python.version=3.11.0
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=TutorialCancionesSQLAlchemy
