--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=cgalvezv-uniandes_TutorialCancionesTags
-sonar.organization=cgalvezv-uniandes
+sonar.projectKey=rcallea_TutorialCancionesTags
+sonar.organization=rcallea
 sonar.coverage.exclusions=**tests/**,**src/vista/**,**docs/**,**setup.py**
 sonar.python.coverage.reportPaths=coverage.xml
 sonar.python.version=3.11.0
