--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=rcallea_TutorialCancionesTags
 sonar.organization=rcallea
-sonar.coverage.exclusions=**tests/**,**src/vista/**,**src/recursos/**,,**src/__main__.py,**docs/**,**setup.py**
+sonar.coverage.exclusions=**tests/**,**src/vista/**,**src/recursos/**,**docs/**,**setup.py**
 sonar.python.coverage.reportPaths=coverage.xml
 
 # This is the name and version displayed in the SonarCloud UI.
